--- a/app/Resources/views/course/edit_course_info_panel.html.twig
+++ b/app/Resources/views/course/edit_course_info_panel.html.twig
@@ -1,7 +1,7 @@
 <div class="d-flex flex-row justify-content-end">
     <a class="btn btn-block btn-primary" href="https://lms.univ-cotedazur.fr/course/view.php?id=11745&section=0" target="_blank">
         <i class="fas fa-question-circle"></i>
-        Besoin d'aide pour remplir le Sylabus ?
+        Besoin d'aide pour remplir le Syllabus ?
     </a>
 </div>
 <div class="row mt-3">
