--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -36,7 +36,8 @@
             <p class="text-muted font-italic">
                 Glisser / déposer ici le matériel nécessaire…
             </p>
-            {{ form_widget(form.equipments) }}
+            {{ form_errors(form.courseResourceEquipments) }}
+            {{ form_widget(form.courseResourceEquipments) }}
         </div>
     </div>
 
