--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -5,7 +5,7 @@
         'form/teachers_field.html.twig'
     ] %}
 
-
+    {{ dump(courseInfo) }}
     {{ form_start(form) }}
 
     <div class="d-flex flex-row justify-content-between">
@@ -23,300 +23,12 @@
     </div>
 
     {{ form_errors(form) }}
-    <div class="card toggle-focus my-2 shadow p-3">
-        <div class="card-header">
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <h3>Email</h3>
-                </div>
-                <div class="col-12 col-md-6">
-                    <button type="button" class="update-focus btn btn-primary float-md-right">Mettre à jour</button>
-                </div>
-            </div>
-        </div>
-        <div class="card-body">
-            <div class="row mt-3">
-                <div class="col">
-                    {{ form_widget(form.period) }}
-                    <label placeholder="Période (facultatif)"></label>
-                    {{ form_errors(form.domain) }}
-                    {{ form_widget(form.domain) }}
-                    <label placeholder="Domaine *"></label>
-                    {{ form_widget(form.languages) }}
-                    <label placeholder="En quelle(s) langue(s) est dispensé ce cours (facultatif)"></label>
-                </div>
-                <div class="col">
-                    <h6>
-                        Quel est le niveau de ce cours ? *
-                        <img id="infos_level" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
-                    </h6>
-                    {{ form_errors(form.level) }}
-                    <ul>
-                        {{ form_widget(form.level) }}
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="card toggle-focus my-2 shadow p-3">
-        <div class="card-header">
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <h3>Email</h3>
-                </div>
-                <div class="col-12 col-md-6">
-                    <button type="button" class="update-focus btn btn-primary float-md-right">Mettre à jour</button>
-                </div>
-            </div>
-        </div>
-        <div class="card-body">
+    {% include('course_info/presentation/view/general.html.twig') %}
+    {% include('course_info/presentation/view/synopsis.html.twig') %}
+    {% include('course_info/presentation/form/teachers.html.twig') %}
+    {% include('course_info/presentation/form/teaching_mode.html.twig') %}
 
-            <div class="row mt-2">
-                <div class="col">
-                    <h6>
-                        Résumé *
-                    </h6>
-                    {{ form_errors(form.summary) }}
-                    {{ form_widget(form.summary) }}
-                </div>
-                <div class="col">
-                    <h6>
-                        Intégrer une ressource vidéo (ou audio) ou téléverser un fichier image de présentation du cours, en respectant la règlementation sur les droits d'auteur.&nbsp;*
-                    </h6>
-                    {{ form_errors(form.video) }}
-                    {{ form_errors(form.image) }}
-                    {{ form_widget(form.mediaType) }}
-                    {% set imageTabClasses = 'nav-link' %}
-                    {% set imageContentClasses = 'tab-pane fade' %}
-                    {% set videoTabClasses = 'nav-link' %}
-                    {% set videoContentClasses = 'tab-pane fade' %}
-                    {% if form.vars.value.mediaType == 'video' %}
-                        {% set videoTabClasses = videoTabClasses ~ ' active' %}
-                        {% set videoContentClasses = videoContentClasses ~ ' show active' %}
-                    {% else %}
-                        {% set imageTabClasses = imageTabClasses ~ ' active' %}
-                        {% set imageContentClasses = imageContentClasses ~ ' show active' %}
-                    {% endif %}
-                    <ul class="nav nav-tabs" id="media_type" role="tablist">
-                        <li class="nav-item">
-                            <a class="{{ imageTabClasses }}" href="#media_image_container" role="tab" data-toggle="tab" data-media-type="image">
-                                Image
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="{{ videoTabClasses }}" href="#media_video_container" role="tab" data-toggle="tab" data-media-type="video">
-                                Vidéo
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="tab-content border p-2">
-                        <div class="{{ imageContentClasses }}" id="media_image_container" role="tabpanel">
-                            <small class="font-weight-bold">Fichier de type jpeg ou png (2Mo maximum)</small>
-                            {{ form_widget(form.image) }}
-                            {% if form.vars.data.image is not null %}
-                                {% if courseInfo.image == form.vars.data.image %}
-                                    {% set imgSrc = form.vars.data.image.filename %}
-                                {% else %}
-                                    {% set imgSrc = courseInfo.image %}
-                                {% endif %}
-                                <img class="img-thumbnail" id="media_image" src="{{ asset('data/' ~ imgSrc) }}">
-                            {% endif %}
-                        </div>
-                        <div class="{{ videoContentClasses }}" id="media_video_container" role="tabpanel">
-                            <img id="infos_video" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
-                            {{ form_widget(form.video) }}
-                            <label placeholder="URL"></label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="card toggle-focus my-2 shadow p-3">
-        <div class="card-header">
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <h3>Email</h3>
-                </div>
-                <div class="col-12 col-md-6">
-                    <button type="button" class="update-focus btn btn-primary float-md-right">Mettre à jour</button>
-                </div>
-            </div>
-        </div>
-        <div class="card-body">
-
-            <div class="row mt-3">
-                <div class="col">
-                    <div class="row mb-3">
-                        <div class="col">
-                            <strong>Qui fait partie de l'équipe enseignante ?</strong>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-8">
-                            {{ form_widget(form.teacherSearch) }}
-                        </div>
-                        <div class="col-4">
-                            {{ form_widget(form.teacherSource) }}
-                            <label placeholder="Source"></label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            {{ form_errors(form.courseTeachers) }}
-                            {{ form_widget(form.courseTeachers) }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="card toggle-focus my-2 shadow p-3">
-        <div class="card-header">
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <h3>Email</h3>
-                </div>
-                <div class="col-12 col-md-6">
-                    <button type="button" class="update-focus btn btn-primary float-md-right">Mettre à jour</button>
-                </div>
-            </div>
-        </div>
-        <div class="card-body">
-
-            <div class="row mt-3">
-                <div class="col">
-                    <div class="row mb-3">
-                        <div class="col">
-                            <strong>Quel est votre mode d'enseignement ? *</strong>
-                        </div>
-                    </div>
-                    <div class="row teaching-hours">
-                        <div class="col-5 border-right">
-                            <div class="row">
-                                <div class="col-5">
-                                    <h6>{{ form_widget(form.teachingMode.children[0]) }}</h6>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col col-4 align-self-center">
-                                    <img style="max-width: 130px;" class="w-100" src="{{ asset('images/in_class_128.png') }}">
-                                </div>
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col">
-                                            {{ form_widget(form.teachingCmClass) }}
-                                            <label placeholder="Heures CM"></label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col">
-                                            {{ form_widget(form.teachingTdClass) }}
-                                            <label placeholder="Heures TD"></label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col">
-                                            {{ form_widget(form.teachingTpClass) }}
-                                            <label placeholder="Heures TP"></label>
-                                        </div>
-                                    </div>
-                                    {{ form_errors(form.teachingOtherTypeClass) }}
-                                    <div class="row">
-                                        <div class="col pr-1">
-                                            {{ form_widget(form.teachingOtherClass) }}
-                                            <label placeholder="Heures autre"></label>
-                                        </div>
-                                        <div class="col pl-1">
-                                            {{ form_widget(form.teachingOtherTypeClass) }}
-                                            <label placeholder="Type"></label>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-7 border-left">
-                            <div class="row">
-                                <div class="col-3">
-                                    <h6 class="text-capitalize">{{ form_widget(form.teachingMode.children[1]) }}</h6>
-                                </div>
-                                <div class="col">
-                                    <small>Présentiel</small>
-                                </div>
-                                <div class="col">
-                                    <small>Distanciel</small>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col col-3 align-self-center">
-                                    <img style="max-width: 130px;" class="w-100" src="{{ asset('images/hybrid_128.png') }}">
-                                </div>
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col">
-                                            {{ form_widget(form.teachingCmHybridClass) }}
-                                            <label placeholder="Heures CM"></label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col">
-                                            {{ form_widget(form.teachingTdHybridClass) }}
-                                            <label placeholder="Heures TD"></label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col">
-                                            {{ form_widget(form.teachingTpHybridClass) }}
-                                            <label placeholder="Heures TP"></label>
-                                        </div>
-                                    </div>
-                                    {{ form_errors(form.teachingOtherTypeHybridClass) }}
-                                    <div class="row">
-                                        <div class="col pr-1">
-                                            {{ form_widget(form.teachingOtherHybridClass) }}
-                                            <label placeholder="Heures autre"></label>
-                                        </div>
-                                        <div class="col pl-1">
-                                            {{ form_widget(form.teachingOtherTypeHybridClass) }}
-                                            <label placeholder="Type"></label>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col">
-                                            {{ form_widget(form.teachingCmHybridDist) }}
-                                            <label placeholder="Heures CM"></label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col">
-                                            {{ form_widget(form.teachingTdHybridDist) }}
-                                            <label placeholder="Heures TD"></label>
-                                        </div>
-                                    </div>
-                                    {{ form_errors(form.teachingOtherTypeHybridDistant) }}
-                                    <div class="row">
-                                        <div class="col pr-1">
-                                            {{ form_widget(form.teachingOtherHybridDist) }}
-                                            <label placeholder="Heures autre"></label>
-                                        </div>
-                                        <div class="col pl-1">
-                                            {{ form_widget(form.teachingOtherTypeHybridDistant) }}
-                                            <label placeholder="Type"></label>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     {{ form_end(form) }}
 
 {% endblock %}
